# MCP-SERVER

./: README.md
MCP_1/: .gitignore  README.md  client.py  mathserver.py  pyproject.toml  task.txt  weather.py
MCP_2/: .gitignore  README.md  database.py  llm_service.py  main.py  pyproject.toml  scraped_data.db
MCP_2/mcp_2.egg-info/: PKG-INFO  SOURCES.txt
MCP_2/scripts/: debug_gemini.py  test_agent.py  test_full_stack.py  test_llm_fix.py  visualize_workflow.py
MCP_3/: .gitignore  MCP_GUIDELINES.md  POSTMAN.json  README.md  example_main.py  requirements.txt
MCP_3/assets/: senscoder_architecture_compact.dot  senscoder_architecture_diagram.dot
MCP_3/backend/: README.md  (+7 more)
MCP_3/mcp-fastapi/: .env.example  README.md  claude_desktop_config.json  pyproject.toml
MCP_3/mcp-fastapi/app/: __init__.py  auth.py  config.py  main.py  mcp_server.py  models.py  project_manager.py  routes.py  wizard_routes.py
MCP_3/mcp-fastapi/app/services/: __init__.py  config_service.py  documentation_generator.py  exec_service.py  fs_service.py  git_service.py  project_analyzer.py
MCP_3/mcp-fastapi/app/templates/: wizard.html
MCP_3/mcp-fastapi/app/utils/: __init__.py  http_client.py  path_utils.py  subprocess_utils.py
MCP_4/: README.md  main.py  mcp.json  pyproject.toml  requirements.txt
MCP_5/: .gitignore  README.md  main.py  manim-mcp.json  pyproject.toml
MCP_6/: .env.example  .gitignore  README.md  claude_desktop_config.json  goal.txt  mcp.config.json  requirements.txt  server.py  target.txt  test.py
test-project/: README.md  index.js  package.json  sample_response.txt
(+125 files in other folders)
